# anuga_drainage

./: .gitignore  How to use ANUGA-SWMM coupling method.md  LICENSE  README.md  our_test.py  pipe_test.inp  pyproject.toml  requirements.txt  swmm_example.py  test_Yshape_flooding_offset.py  test_volume_inlet_op.py  test_volume_inlet_op_2.py  test_volume_steve.py
culvert_example/: anuga_pipedream_culvert.py  terrain.csv
examples/culvert_example/: run_anuga_pipedream_culvert.py  run_boyd_culvert.py  run_pipedream_culvert.py
examples/pyswmm_with_openings/: test_boydpipe.py  test_volume_inlet_op.py  test_volume_inlet_op_2.py  total_volume_testing.py
examples/real_example/: pipes.py  project.gmw  real_example.out  real_example_no_pipes.py  real_example_pipes.py  real_example_swmm.py  run_no_pipes.py  run_pipedream.py  run_swmm.py
examples/simple_culvert_example/: run_anuga_swmm_simple_short_culvert.py  run_boyd.py  run_pipedream.py  run_swmm_long.py  run_swmm_short.py  swmm_input_long.inp
link_example/: boyd_pipe.py  pipedream.py
pipedream/: run_pipedream_culvert.py
real_example/: coupling.py  domain.csv  no_pipes.py  pipes.py  project.gmw  real_example.inp  real_example.out  real_example.rpt  real_example_swmm.py  utilities.py
simple_culvert_example/: anuga_boyd_culvert.py  anuga_pipedream_culvert.py  coupling.py  run_anuga_boyd_simple_culvert.py  run_anuga_pipedream_simple_culvert.py  run_anuga_swmm_simple_culvert.py  run_anuga_swmm_simple_long_culvert.py  run_anuga_swmm_simple_short_culvert.py  swmm_input.inp  swmm_input_short_culvert.inp
(+13 files in other folders)
