[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anuga_drainage"
version = "0.0.1"
authors = [
  { name="Stephen Roberts", email="stephen.roberts@anu.edu.au" },
]
description = "Coupling anuga with SWMM and pipedream"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/anuga-community/anuga_drainage"
"Bug Tracker" = "https://github.com/anuga-community/anuga_drainage/issues"
